--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,11 +1,13 @@
 {
   "name": "frontend",
-  "proxy": "http://192.168.1.7:7777",
+  "proxy": "http://192.168.1.3:7777",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "^2.0.10",
     "@material-ui/core": "^4.12.3",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.2",
@@ -76,5 +78,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.8",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
   }
 }
